[package]
name = "lushus-session"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde_json = "1.0"
rand = "0.8"
redis = { version = "0.21", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["derive", "std"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1.20", features = ["macros"] }
